--- a/app/src/main/res/values/donottranslate_prefs.xml
+++ b/app/src/main/res/values/donottranslate_prefs.xml
@@ -45,7 +45,7 @@
         <item>4</item>
     </string-array>
     <string name="pref_key_file_list_animation">key_file_list_animation</string>
-    <bool name="pref_default_value_file_list_animation">true</bool>
+    <bool name="pref_default_value_file_list_animation">false</bool>
     <string name="pref_key_standard_directory_settings">key_standard_directories</string>
     <string name="pref_key_bookmark_directories">key_bookmark_directories</string>
     <string name="pref_key_root_strategy">key_root_strategy</string>
