添加快速删除功能

--- a/app/src/main/res/menu/file_item.xml
+++ b/app/src/main/res/menu/file_item.xml
@@ -24,6 +24,10 @@
         android:title="@string/delete" />
 
     <item
+        android:id="@+id/action_quick_delete"
+        android:title="@string/quick_delete" />
+
+    <item
         android:id="@+id/action_rename"
         android:title="@string/rename" />
 
